# video_ws

src/eth_rx_tx/: CMakeLists.txt  package.xml
src/eth_rx_tx/launch/: mobile_shooter (copy).launch  mobile_shooter.launch
src/eth_rx_tx/src/: eth_rx_tx.cpp
src/quartet_services/: CMakeLists.txt  package.xml
src/quartet_services/srv/: battery.srv  configurator.srv  power.srv  status.srv  timeDelta.srv
src/ros_rtsp-master/config/: stream_setup.yaml
